Fix 1px searchbar visible when closed

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1600,7 +1600,7 @@ p {
   z-index: 1;
   clip-path: polygon(0 0, 100% 0%, 100% 100%, 15px 100%, 0 calc(100% - 15.00px));
   margin-bottom: -82px;
-  transform: translateX(310px);
+  transform: translateX(311px);
   transition: 0.3s;
 }
 
